# rules_playdate

./: .bazelrc  .gitignore  MODULE.bazel  README.md
.github/workflows/: ci.yml
examples/c_hello_world/: BUILD.bazel  main.c
examples/swift_hello_world/: BUILD.bazel  Game.swift
playdate/: playdate.bzl  playdate_sdk.bzl
playdate/internal/: playdate_application.bzl  playdate_sdk.bzl
playdate/lib/c/: BUILD.bazel  cplaydate.c
playdate/lib/c/include/: cplaydate.apinotes  cplaydate.h  module.modulemap
playdate/lib/swift/: BUILD.bazel  Playdate.swift
playdate/toolchains/: BUILD.bazel  BUILD.bazel.tpl  playdate_toolchain.bzl.tpl
