load("@rules_apple//apple:macos.bzl", "macos_dylib")
load("@rules_swift//swift:swift.bzl", "swift_library")
load("//playdate:playdate.bzl", "playdate_application")

# TODO: fix
# getting duplicate symbols error
# swift_library(
#     name = "swift_hello_world_lib",
#     srcs = ["Game.swift"],
#     deps = ["//playdate/lib/swift:swift_playdate"],
# )

# macos_dylib(
#     name = "swift_hello_world_dylib",
#     minimum_os_version = "14.0",
#     deps = [":swift_hello_world_lib"],
# )

# playdate_application(
#     name = "swift_hello_world",
#     library = ":swift_hello_world_dylib",
# )
