load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "swift_playdate",
    srcs = ["Playdate.swift"],
    copts = [
        "-Xfrontend",
        "-disable-objc-interop",
        "-Xfrontend",
        "-disable-stack-protector",
        "-Xfrontend",
        "-function-sections",
        "-Xfrontend",
        "-gline-tables-only",
    ],
    module_name = "Playdate",
    visibility = ["//visibility:public"],
    deps = ["//playdate/lib/c:c_playdate"],
)
